bug #201947 - added flex to default state of mobile nav so it doesn't shift as it loads different nav states.

--- a/wp-content/themes/arizona-envelope/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/arizona-envelope/assets/styles/layouts/_header.scss
@@ -313,6 +313,12 @@
             }*/
         }
         @media screen and (max-width: $breakpoint--large){
+            display: flex!important;
+            column-count: 1;
+            flex-direction: column;
+            &.collapse{
+                display: none!important;
+            }
             &.collapse.in{
                 display: flex!important;
                 column-count: 1;
